Fix alignment for pricing

--- a/assets/component-cart-items.css
+++ b/assets/component-cart-items.css
@@ -275,7 +275,7 @@ cart-remove-button .icon-remove {
     margin: 0.5rem 0 0 1.5rem;
   }
 
-  .cart-item__price-wrapper {
+  .cart-item__price-wrapper > *:only-child:not(.cart-item__discounted-prices) {
     margin-top: 1rem;
   }
 }
